--- a/config
+++ b/config
@@ -154,8 +154,8 @@ bindsym $mod+Shift+c reload
 # restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
 bindsym $mod+Shift+r restart
 # exit i3 (logs you out of your X session)
-bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -B 'Yes, exit i3' 'i3-msg exit'"
-
+# bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -B 'Yes, exit i3' 'i3-msg exit'"
+bindsym $mod+Shift+e exit
 # resize window (you can also use the mouse for that)
 mode "resize" {
         # These bindings trigger as soon as you enter the resize mode
@@ -186,15 +186,16 @@ bindsym $mod+r mode "resize"
 # to move workspace to next window
 bindsym $mod+x move workspace to output next
 
-# confiure monitor order
-exec xrandr --output DP-2 --right-of HDMI-0
+# configure monitor order
+exec xrandr --output DP-2 --right-of HDMI-0 --primary
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
         status_command i3status
+        tray_output primary
 }
 
 # key repeat
 exec --no-startup-id xset r rate 180 40
-exec --no-startup-id setxkbmap -layout 'us,be' -option 'grp:ctrl_shift_toggle'
+exec --no-startup-id setxkbmap -layout 'us,be' -option 'grp:lctrl_lwin_toggle'
