manage app per workspace

--- a/config
+++ b/config
@@ -101,10 +101,10 @@ bindsym $mod+w layout tabbed
 bindsym $mod+e layout toggle split
 
 # toggle tiling / floating
-bindsym $mod+Shift+space floating toggle
+bindsym $mod+Shift+t floating toggle
 
 # change focus between tiling / floating windows
-bindsym $mod+space focus mode_toggle
+bindsym $mod+t focus mode_toggle
 
 # focus the parent container
 bindsym $mod+a focus parent
@@ -114,40 +114,43 @@ bindsym $mod+a focus parent
 
 # Define names for default workspaces for which we configure key bindings later on.
 # We use variables to avoid repeating the names in multiple places.
-set $ws1 "1"
+set $term "1: terminal"
 set $ws2 "2"
 set $ws3 "3"
 set $ws4 "4"
 set $ws5 "5"
 set $ws6 "6"
 set $ws7 "7"
-set $ws8 "8"
-set $ws9 "9"
-set $ws10 "10"
+set $web "8: web"
+set $chat "9: chat"
+set $spotify "10: spotify" 
 
 # switch to workspace
-bindsym $mod+1 workspace number $ws1
+bindsym $mod+1 workspace number $term
 bindsym $mod+2 workspace number $ws2
 bindsym $mod+3 workspace number $ws3
 bindsym $mod+4 workspace number $ws4
 bindsym $mod+5 workspace number $ws5
 bindsym $mod+6 workspace number $ws6
 bindsym $mod+7 workspace number $ws7
-bindsym $mod+8 workspace number $ws8
-bindsym $mod+9 workspace number $ws9
-bindsym $mod+0 workspace number $ws10
+bindsym $mod+8 workspace number $web
+bindsym $mod+9 workspace number $chat
+bindsym $mod+0 workspace number $spotify
+#jbindsym $mod+8 workspace number $ws8
+# bindsym $mod+9 workspace number $ws9
+# bindsym $mod+0 workspace number $ws10
 
 # move focused container to workspace
-bindsym $mod+Shift+1 move container to workspace number $ws1
+bindsym $mod+Shift+1 move container to workspace number $term
 bindsym $mod+Shift+2 move container to workspace number $ws2
 bindsym $mod+Shift+3 move container to workspace number $ws3
 bindsym $mod+Shift+4 move container to workspace number $ws4
 bindsym $mod+Shift+5 move container to workspace number $ws5
 bindsym $mod+Shift+6 move container to workspace number $ws6
 bindsym $mod+Shift+7 move container to workspace number $ws7
-bindsym $mod+Shift+8 move container to workspace number $ws8
-bindsym $mod+Shift+9 move container to workspace number $ws9
-bindsym $mod+Shift+0 move container to workspace number $ws10
+bindsym $mod+Shift+8 move container to workspace number $web
+bindsym $mod+Shift+9 move container to workspace number $chat
+bindsym $mod+Shift+0 move container to workspace number $spotify
 
 # reload the configuration file
 bindsym $mod+Shift+c reload
@@ -203,3 +206,13 @@ exec_always --no-startup-id setxkbmap -layout 'us,be' -option 'grp:lctrl_lwin_to
 exec_always --no-startup-id nitrogen --restore
 
 exec_always --no-startup-id picom -b -f
+
+for_window [class="Spotify"] move to workspace $spotify
+for_window [class="discord"] move to workspace $chat
+for_window [class="Slack"] move to workspace $chat
+for_window [class="Google-chrome"] move to workspace $web
+
+exec --no-startup-id Spotify
+exec --no-startup-id Google-chrome
+exec --no-startup-id Slack
+exec --no-startup-id discord
