--- a/config
+++ b/config
@@ -15,6 +15,9 @@ set $mod Mod1
 # is used in the bar {} block below.
 font pango:monospace 8
 
+default_border pixel 1
+default_floating_border normal
+font xft:URWGothic-Book 11
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
 #font pango:DejaVu Sans Mono 8
@@ -35,6 +38,7 @@ exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork
 exec --no-startup-id nm-applet
 
 # Use pactl to adjust volume in PulseAudio.
+
 set $refresh_i3status killall -SIGUSR1 i3status
 bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +10% && $refresh_i3status
 bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ -10% && $refresh_i3status
@@ -61,6 +65,10 @@ bindsym $mod+Shift+q kill
 # There also is i3-dmenu-desktop which only displays applications shipping a
 # .desktop file. It is a wrapper around dmenu, so you need that installed.
 bindcode $mod+40 exec --no-startup-id i3-dmenu-desktop
+bindsym $mod+z exec --no-startup-id morc_menu
+
+
+
 
 # change focus
 bindsym $mod+h focus left
@@ -184,6 +192,22 @@ mode "resize" {
         bindsym $mod+r mode "default"
 }
 
+bindsym $mod+m mode "$mode_system"
+set $mode_system (l)ock, (e)xit, switch_(u)ser, (s)uspend, (h)ibernate, (r)eboot, (Shift+s)hutdown
+mode "$mode_system" {
+	bindsym l exec --no-startup-id i3exit lock, mode "default"
+	bindsym s exec --no-startup-id i3exit suspend, mode "default"
+	bindsym u exec --no-startup-id i3exit switch_user, mode "default"
+	bindsym e exec --no-startup-id i3exit logout, mode "default"
+	bindsym h exec --no-startup-id i3exit hibernate, mode "default"
+	bindsym r exec --no-startup-id i3exit reboot, mode "default"
+	bindsym Shift+s exec --no-startup-id i3exit shutdown, mode "default"
+
+	bindsym Return mode "default"
+	bindsym Escape mode "default"
+}
+
+
 bindsym $mod+r mode "resize"
 
 # to move workspace to next window
@@ -197,7 +221,28 @@ exec_always xrandr --output DP-2 --right-of HDMI-0 --primary
 bar {
         status_command i3status
         tray_output primary
+
+
+        strip_workspace_numbers yes
+
+          colors {
+              background #222D31
+              statusline #F9FAF9
+              separator  #454947
+
+#                      border  backgr. text
+              focused_workspace  #F9FAF9 #16a085 #292F34
+              active_workspace   #595B5B #353836 #FDF6E3
+              inactive_workspace #595B5B #222D31 #EEE8D5
+              binding_mode       #16a085 #2C2C2C #F9FAF9
+              urgent_workspace   #16a085 #FDF6E3 #E5201D
+          }
 }
+
+gaps inner 8
+gaps outer -4
+smart_gaps on
+smart_borders on
 
 # key repeat
 exec_always --no-startup-id xset r rate 180 40
@@ -211,8 +256,10 @@ for_window [class="Spotify"] move to workspace $spotify
 for_window [class="discord"] move to workspace $chat
 for_window [class="Slack"] move to workspace $chat
 for_window [class="Google-chrome"] move to workspace $web
+for_window [class="firefox"] move to workspace $web
 
 exec --no-startup-id Spotify
 exec --no-startup-id Google-chrome
 exec --no-startup-id Slack
 exec --no-startup-id discord
+
