--- a/config
+++ b/config
@@ -216,7 +216,7 @@ exec_always xrandr --output DP-2 --right-of HDMI-0 --primary
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
-        status_command i3status | $HOME/.cargo/bin/i3spotify
+        status_command i3status
         tray_output primary
 
 
