--- a/config
+++ b/config
@@ -128,7 +128,7 @@ set $ws3 "3"
 set $ws4 "4"
 set $ws5 "5"
 set $ws6 "6"
-set $ws7 "7"
+set $mail "7: mail"
 set $web "8: web"
 set $chat "9: chat"
 set $spotify "10: spotify" 
@@ -140,7 +140,7 @@ bindsym $mod+3 workspace number $ws3
 bindsym $mod+4 workspace number $ws4
 bindsym $mod+5 workspace number $ws5
 bindsym $mod+6 workspace number $ws6
-bindsym $mod+7 workspace number $ws7
+bindsym $mod+7 workspace number $mail
 bindsym $mod+8 workspace number $web
 bindsym $mod+9 workspace number $chat
 bindsym $mod+0 workspace number $spotify
@@ -155,7 +155,7 @@ bindsym $mod+Shift+3 move container to workspace number $ws3
 bindsym $mod+Shift+4 move container to workspace number $ws4
 bindsym $mod+Shift+5 move container to workspace number $ws5
 bindsym $mod+Shift+6 move container to workspace number $ws6
-bindsym $mod+Shift+7 move container to workspace number $ws7
+bindsym $mod+Shift+7 move container to workspace number $mail
 bindsym $mod+Shift+8 move container to workspace number $web
 bindsym $mod+Shift+9 move container to workspace number $chat
 bindsym $mod+Shift+0 move container to workspace number $spotify
@@ -254,9 +254,11 @@ for_window [class="discord"] move to workspace $chat
 for_window [class="Slack"] move to workspace $chat
 for_window [class="Google-chrome"] move to workspace $web
 for_window [class="firefox"] move to workspace $web
+for_window [class="thunderbird"] move to workspace $mail
 
 exec --no-startup-id spotify
 exec --no-startup-id google-chrome-stable
 exec --no-startup-id slack
 exec --no-startup-id discord
+exec --no-startup-id thunderbird
 
