--- a/config
+++ b/config
@@ -224,22 +224,24 @@ output HDMI-A-2 pos 0 500 res 1920x1080
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
-bar {
-  strip_workspace_numbers yes
+# bar {
+#   strip_workspace_numbers yes
+#
+#   colors {
+#       background #222D31
+#       statusline #F9FAF9
+#       separator  #454947
+#
+# #                      border  backgr. text
+#       focused_workspace  #F9FAF9 #16a085 #292F34
+#       active_workspace   #595B5B #353836 #FDF6E3
+#       inactive_workspace #595B5B #222D31 #EEE8D5
+#       binding_mode       #16a085 #2C2C2C #F9FAF9
+#       urgent_workspace   #16a085 #FDF6E3 #E5201D
+#   }
+# }
 
-  colors {
-      background #222D31
-      statusline #F9FAF9
-      separator  #454947
-
-#                      border  backgr. text
-      focused_workspace  #F9FAF9 #16a085 #292F34
-      active_workspace   #595B5B #353836 #FDF6E3
-      inactive_workspace #595B5B #222D31 #EEE8D5
-      binding_mode       #16a085 #2C2C2C #F9FAF9
-      urgent_workspace   #16a085 #FDF6E3 #E5201D
-  }
-}
+bar swaybar_command waybar
 
 gaps inner 8
 gaps outer -4
