--- a/config
+++ b/config
@@ -267,6 +267,6 @@ for_window [class="thunderbird"] move to workspace $mail
 exec --no-startup-id spotify --enable-features=UseOzonePlatform --ozone-platform=wayland
 exec --no-startup-id google-chrome-stable --enable-features=UseOzonePlatform --ozone-platform=wayland
 exec --no-startup-id slack --enable-features=UseOzonePlatform --ozone-platform=wayland
-exec --no-startup-id discord
-exec --no-startup-id thunderbird
+# exec --no-startup-id discord
+# exec --no-startup-id thunderbird
 
