--- a/config
+++ b/config
@@ -257,6 +257,10 @@ input type:keyboard {
 	xkb_variant ,nodeadkeys
 	xkb_options grp:lctrl_lwin_toggle
 }
+input type:pointer {
+    accel_profile "flat" # disable mouse acceleration (enabled by default; to set it manually, use "adaptive" instead of "flat")
+    pointer_accel 0.5 # set mouse sensitivity (between -1 and 1)
+}
 for_window [class="Spotify"] move to workspace $spotify
 for_window [class="discord"] move to workspace $chat
 for_window [app_id="Slack"] move to workspace $chat
