--- a/config
+++ b/config
@@ -177,7 +177,7 @@ input type:keyboard {
 	repeat_delay 180
 	repeat_rate 40
 	xkb_layout us,be
-	xkb_variant ,nodeadkeys
+	xkb_variant ,
 	xkb_options grp:lctrl_lwin_toggle
 }
 input type:pointer {
