--- a/config
+++ b/config
@@ -141,7 +141,7 @@ bindsym $mod+m mode "$mode_system"
 mode "$mode_system" {
 	# TODO
 	bindsym l exec --no-startup-id swaylock, mode "default"
-	bindsym s exec --no-startup-id swaymsg exec suspend, mode "default"
+	bindsym s exec --no-startup-id swaymsg exec systemctl suspend, mode "default"
 	bindsym u exec --no-startup-id swaymsg exec switch_user, mode "default"
 	bindsym e exec --no-startup-id swaymsg exec logout, mode "default"
 	bindsym h exec --no-startup-id swaymsg exec hibernate, mode "default"
