--- a/config
+++ b/config
@@ -184,7 +184,7 @@ input type:pointer {
     accel_profile "flat" # disable mouse acceleration (enabled by default; to set it manually, use "adaptive" instead of "flat")
     pointer_accel 0.42 # set mouse sensitivity (between -1 and 1)
 }
-for_window [class="Spotify"] move to workspace $spotify
+for_window [class="Spotify"] move container to workspace $spotify
 for_window [class="discord"] move to workspace $chat
 for_window [app_id="Slack"] move to workspace $chat
 for_window [app_id="google-chrome"] move to workspace $web
