--- a/config
+++ b/config
@@ -136,7 +136,7 @@ mode "resize" {
         bindsym $mod+r mode "default"
 }
 
-set $mode_system (l)ock, (e)xit, switch_(u)ser, (s)uspend, (h)ibernate, (r)eboot, (Shift+s)hutdown
+set $mode_system (l)ock, (e)xit, switch_(u)ser, (s)uspend, suspend-then-(h)ibernate, (r)eboot, (Shift+s)hutdown
 bindsym $mod+m mode "$mode_system"
 mode "$mode_system" {
 	# TODO
@@ -144,7 +144,7 @@ mode "$mode_system" {
 	bindsym s exec --no-startup-id swaymsg exec systemctl suspend, mode "default"
 	bindsym u exec --no-startup-id swaymsg exec switch_user, mode "default"
 	bindsym e exec --no-startup-id swaymsg exec logout, mode "default"
-	bindsym h exec --no-startup-id swaymsg exec hibernate, mode "default"
+	bindsym h exec --no-startup-id swaymsg exec systemctl suspend-then-hibernate, mode "default"
 	bindsym r exec --no-startup-id swaymsg exec reboot, mode "default"
 	bindsym Shift+s exec --no-startup-id swaymsg exec shutdown now, mode "default"
 
@@ -161,15 +161,15 @@ bindsym $mod+x exec "swaymsg -t get_outputs |jq '[.[] | select(.active == true)]
 
 # configure monitor order, resolution and background
 output DP-1 pos 1920 0 res 3440x1440@60Hz
-# output HDMI-A-1 pos 0 500 res 1920x1080@60Hz
+output HDMI-A-1 pos 0 500 res 1920x1080@60Hz
 output * bg #4e3f5c solid_color
 
 bar swaybar_command waybar
 
-gaps inner 8
+gaps inner 4
 gaps outer -4
-smart_gaps on
-smart_borders on
+smart_gaps off
+smart_borders off
 
 # key repeat
 # exec_always --no-startup-id xset r rate 180 40
@@ -191,8 +191,8 @@ for_window [app_id="google-chrome"] move to workspace $web
 for_window [class="firefox"] move to workspace $web
 for_window [class="thunderbird"] move to workspace $mail
 
-exec --no-startup-id google-chrome-stable --enable-features=UseOzonePlatform --ozone-platform=wayland --enable-features=WaylandWindowDecorations --ozone-platform-hint=auto
-exec --no-startup-id slack --enable-features=UseOzonePlatform --ozone-platform=wayland
+# exec --no-startup-id google-chrome-stable --enable-features=UseOzonePlatform --ozone-platform=wayland --enable-features=WaylandWindowDecorations --ozone-platform-hint=auto
+# exec --no-startup-id slack --enable-features=UseOzonePlatform --ozone-platform=wayland
 # exec --no-startup-id discord
 # exec --no-startup-id thunderbird
 
